   * Displays IPv6 network connections
   * Two new terminator tests: W1 (send WM_DESTROY messages) and 
     W2 (send WM_QUIT messages)
   * Mutant owner information
   * Elevation prompt when attempting to view process properties
   * All list views now have sort arrows
   * Network list now displays process tooltips
   * Decreased memory and CPU usage
   * Added a glossary to Help
 * FIXED:
   * #2820170 - "System.ArgumentOutOfRangeException in network list"
   * #2845427 - "Indicator integer overflow"
   * #2847691 - "Apply button bug"
   * #2849052 - "not defined by current visual style"
   * Critical KProcessHacker denial-of-service security issues
   * Incorrect menu items for System threads
   * Crash when viewing error details in the event 
     of a corrupt configuration file
   * Notification icons were fixed at 16x16 size
   * Sort order for the relative start time column

1.5
 * NEW/IMPROVED:
   * #2831605 - "Add handle count by type to process properties handle tab"
   * #2836706 - "Signature Column in Processes"
   * Improved kernel modules list
   * Detects custom kernels
   * Performance improvements
   * KTM resource manager information
 * FIXED:
   * Windows XP BSODs
   * Incorrect drive letter resolving for file handles
   * Linked token display on x64

1.4
 * NEW/IMPROVED:
   * Full support for Windows 7 SP0
   * Basic support for Windows 64-bit
   * Ability to unload drivers
   * Handle names for Kernel Transaction Manager (KTM) objects
   * Ability to save details for processes
   * Improved handle granted access display
   * Improved process window exit status display
   * Improved user prompts
   * Ability to open key handles in regedit
   * Thread list is more responsive
   * Process exit notification (in the process window) is now instant
   * Improved control tab indicies
   * Small performance improvements
 * FIXED:
   * #2821437 - "Windows 7 PsTerminateProcess crash"