@@ -150,6 +150,10 @@ pre {
       <dd>If enabled, network connections made by Process Hacker will be hidden in the network 
       connections list.</dd>
       
+      <dt>Elevation</dt>
+      <dd>Controls how Process Hacker will prompt for elevation in operations where the user 
+      does not have required permissions.</dd>
+      
       <dt>Max. Sample History</dt>
       <dd>Specifies the maximum number of performance-related samples to be retained. This includes 
       CPU, I/O and memory usage data for the system and all processes.</dd>
