@@ -1,7 +1,7 @@
 ﻿//------------------------------------------------------------------------------
 // <auto-generated>
 //     This code was generated by a tool.
-//     Runtime Version:2.0.50727.4927
+//     Runtime Version:2.0.50727.4016
 //
 //     Changes to this file may cause incorrect behavior and will be lost if
 //     the code is regenerated.
@@ -1642,6 +1642,18 @@ namespace ProcessHacker.Properties {
             }
             set {
                 this["AppUpdateAutomatic"] = value;
+            }
+        }
+        
+        [global::System.Configuration.UserScopedSettingAttribute()]
+        [global::System.Diagnostics.DebuggerNonUserCodeAttribute()]
+        [global::System.Configuration.DefaultSettingValueAttribute("1")]
+        public int ElevationLevel {
+            get {
+                return ((int)(this["ElevationLevel"]));
+            }
+            set {
+                this["ElevationLevel"] = value;
             }
         }
     }
