@@ -1,0 +1,13 @@
+﻿using System;
+using System.Collections.Generic;
+using System.Text;
+
+namespace ProcessHacker.UI.Actions
+{
+    public enum ElevationLevel
+    {
+        Never = 0,
+        Prompt,
+        Elevate
+    }
+}
