@@ -412,6 +412,9 @@
             <setting name="AppUpdateAutomatic" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="ElevationLevel" serializeAs="String">
+                <value>1</value>
+            </setting>
         </ProcessHacker.Properties.Settings>
     </userSettings>
 </configuration>
